# aicommit

./: README.md  pyproject.toml
aicommit/: commit.py
scripts/: flow.py
