[tool.poetry]
name = "aicommit"
version = "0.0.1"
description = ""
authors = ["ultrasev <i@ultrasev.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
openai = "^1.32.0"
loguru = "^0.7.2"
rich = "^13.7.1"
pydantic-ai = "^0.0.13"


[tool.poetry.scripts]
aicommit= "aicommit.commit:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
